# polymarket-data-collection

./: .env.example  .gitignore  CLAUDE.md  README.md  poly_script_log.txt  pyproject.toml  requirements.txt  test.py  test_elon_run.py  test_ws_ticks.py
dataset_cards/: crypto_README.md  culture_README.md
deploy/: polymarket-gap-audit.service  polymarket-gap-audit.timer  polymarket-historical.service  polymarket-historical.timer  polymarket-live.service  polymarket-restart.service  polymarket-restart.timer  polymarket-upload.service  polymarket-upload.timer  polymarket-websocket-alert.service  polymarket-websocket.service  setup.sh
docs/: cli.md  dataset.md  deployment.md
polymarket_pipeline/: __init__.py  alerts.py  api.py  cli.py  config.py  market_definitions.json  market_normalization.py  markets.py  models.py  parsing.py  pipeline.py  providers.py  query.py  retry.py  settings.py  storage.py  subgraph_client.py  ticks.py
polymarket_pipeline/phases/: __init__.py  binance_history.py  price_history.py  (+8 more)
scripts/: audit_ws_gaps.py  collect_targeted.py  profile_dataset.py  recollect_legacy_ticks.py  retry_failed_windows.py  tick_backfill.py
tests/: test_alerts.py  test_audit_ws_gaps.py  test_binance_history.py  test_market_definitions.py  test_market_normalization.py  test_parsing.py  test_phase_shared.py  test_pipeline.py  test_price_history_phase.py  test_query.py  test_retry.py  test_settings.py  test_storage.py  test_subgraph_client.py  test_subgraph_ticks.py  test_tick_backfill_phase.py  test_websocket_phase.py  test_ws_messages.py  test_ws_watchdog.py
