[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "polymarket-data-pipeline"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=12.0",
    "requests>=2.28",
    "websockets>=11.0",
    "py-clob-client>=0.1",
    "tabulate>=0.9",
    "huggingface-hub>=0.16",
    "duckdb>=0.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
polymarket-pipeline = "polymarket_pipeline.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["polymarket_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
